@@ -15,7 +15,7 @@
    limitations under the License.
 -->
 
-<ivy-module version="1.0">
+<ivy-module version="1.0" xmlns:m="http://ant.apache.org/ivy/maven">
   <info organisation="org.apache.hadoop" module="${ant.project.name}" revision="${version}">
     <license name="Apache 2.0"/>
     <ivyauthor name="Apache Hadoop Team" url="http://hadoop.apache.org"/>
@@ -57,16 +57,20 @@
  <dependencies>
    <dependency org="org.apache.hadoop" name="hadoop-common" 
                rev="${hadoop-common.version}" conf="common->default"/> 
-   <dependency org="org.apache.hadoop" name="hadoop-common-test" 
-               rev="${hadoop-common.version}" conf="common->default"/> 
+   <dependency org="org.apache.hadoop" name="hadoop-common" 
+               rev="${hadoop-common.version}" conf="common->default"> 
+      <artifact name="hadoop-common" type="tests" ext="jar" m:classifier="tests"/>
+   </dependency>
    <dependency org="org.apache.hadoop" name="hadoop-hdfs" 
                rev="${hadoop-hdfs.version}" conf="common->default"/> 
    <dependency org="org.apache.hadoop" name="hadoop-common-instrumented"
                rev="${hadoop-common.version}" conf="system->default"/>
    <dependency org="org.apache.hadoop" name="hadoop-hdfs-instrumented"
                rev="${hadoop-common.version}" conf="system->default"/>
-   <dependency org="org.apache.hadoop" name="hadoop-common-test" 
-               rev="${hadoop-common.version}" conf="test->default"/>
+   <dependency org="org.apache.hadoop" name="hadoop-common" 
+               rev="${hadoop-common.version}" conf="test->default">
+      <artifact name="hadoop-common" type="tests" ext="jar" m:classifier="tests"/>
+   </dependency>
    <dependency org="org.apache.hadoop" name="hadoop-hdfs-test" 
                rev="${hadoop-hdfs.version}" conf="test->default"/>
    <dependency org="checkstyle" name="checkstyle" rev="${checkstyle.version}"
